--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
           class="jo-sidebar__heading d-flex justify-content-between align-items-center"
         >
           <a href="#"
-            ><img src="assets/img/logo.svg" alt="logo" class="logo"
+            ><img src="assets/img/Logo.webp" alt="logo" class="logo"
           /></a>
           <button type="button" class="jo-sidebar-close-btn">
             <i class="flaticon-add-plus-button"></i>
@@ -60,7 +60,7 @@
 
     <!-- HEADER SECTION START -->
     <header class="jo-header jo-inner-header">
-      <a href="index.html"><img src="assets/img/logo.svg" alt="logo" /></a>
+      <a href="index.html"><img src="assets/img/Logo.webp" alt="logo" /></a>
       <div class="jo-header-right">
         <div class="jo-header-nav">
           <div class="to-go-to-sidebar-in-mobile">
@@ -425,7 +425,7 @@
           <div class="row gx-4 gy-sm-5 gy-4 align-items-center">
             <div class="col-lg-3 col-6 col-xxs-12">
               <a href="index.html"
-                ><img src="assets/img/logo-white.svg" alt="logo" class="logo"
+                ><img src="assets/img/Logo.webp" alt="logo" class="logo"
               /></a>
             </div>
             <div class="col-lg-6 order-lg-1 order-2">
@@ -444,12 +444,7 @@
             <div class="col-lg-3 col-6 col-xxs-12 order-lg-2 order-1">
               <div
                 class="tt-footer-top__socials jo-footer-top__socials justify-content-start justify-content-sm-end"
-              >
-                <a href="#"><i class="flaticon-facebook-1"></i></a>
-                <a href="#"><i class="flaticon-twitter"></i></a>
-                <a href="#"><i class="flaticon-social-media"></i></a>
-                <a href="#"><i class="flaticon-youtube-1"></i></a>
-              </div>
+              ></div>
             </div>
           </div>
         </div>
@@ -468,12 +463,11 @@
               <div class="jo-footer-widget jo-footer-links">
                 <h5 class="jo-footer-widget__title">Browse Categories</h5>
                 <div class="links">
-                  <a href="#">Music</a>
-                  <a href="#">Sports</a>
-                  <a href="#">Gaming</a>
-                  <a href="#">Fashion</a>
+                  <a href="#">About</a>
+                  <a href="#">Contact</a>
+                  <a href="#">Terms</a>
+                  <a href="#">Privacy</a>
                   <a href="#">Art</a>
-                  <a href="#">Photography</a>
                 </div>
               </div>
             </div>
@@ -494,7 +488,7 @@
 
         <!-- footer bottom -->
         <div class="tt-footer-bottom text-center">
-          <p class="mb-0">Copyright ©2024 Developed by&nbsp;Influtics</p>
+          <p class="mb-0">Copyright ©2025 Developed by&nbsp;Xcrino</p>
         </div>
       </div>
     </footer>
