--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Passionseed</title>
 
     <!-- libraries CSS -->
     <link rel="stylesheet" href="assets/font/flaticon_jio_-_influencer.css" />
@@ -64,9 +64,9 @@
         <div class="jo-header-nav">
           <div class="to-go-to-sidebar-in-mobile">
             <nav>
-              <a href="index.html">Home</a>
-              <a href="about.html">About Me</a>
-              <div class="has-sub-menu relative">
+              <!-- <a href="index.html">Home</a> -->
+              <!-- <a href="about.html">About Me</a> -->
+              <!-- <div class="has-sub-menu relative">
                 <a role="button">Blog</a>
 
                 <ul class="jo-header-submenu">
@@ -74,27 +74,36 @@
                   <li><a href="blog-details.html">Blog Details</a></li>
                 </ul>
               </div>
-              <a href="contact.html">Contact</a>
+              <a href="contact.html">Contact</a> -->
             </nav>
           </div>
         </div>
         <div class="d-flex gap-2">
-          <a href="about.html" class="jo-btn"
-            ><i class="flaticon-add-plus-button"></i>Follow Me</a
-          >
-          <button
-            class="jo-header-sidebar-open-btn jo-btn px-3 d-inline-block d-lg-none"
-          >
-            <i class="flaticon-menu"></i>
-          </button>
-        </div>
+  <div class="d-flex gap-2">
+    <!-- Sign In Button with User Icon -->
+    <a target="_blank" href="https://passionseed.com/" class="jo-btn">
+      <i class="flaticon-user"></i> Login
+    </a>
+    <button class="jo-header-sidebar-open-btn jo-btn px-3 d-inline-block d-lg-none">
+      <i class="flaticon-menu"></i>
+    </button>
+  </div>
+
+  <div class="d-flex gap-2">
+    <!-- Sign Up Button with User Plus Icon -->
+    <a href="about.html" class="jo-btn">
+  <i style="color: white;" class="fas fa-user-plus"></i> Register
+</a>
+  </div>
+</div>
+
       </div>
     </header>
     <!-- HEADER SECTION END -->
 
     <main>
       <!-- BANNER SECTION START -->
-      <section class="jo-banner" style="height: 100vh">
+      <section class="jo-banner" style="height:95vh">
         <div class="jo-banner-container">
           <div class="row gx-0 gy-4 align-items-center">
             <div class="col-lg-7">
@@ -111,10 +120,7 @@
                     >Stream Your Passion
                     <span>Inspire the World.</span>
                 </h1>
-                <div class="jo-banner__btns">
-                  <a href="#" class="jo-btn">About Me</a>
-                  <a href="#" class="jo-btn">Contact Me</a>
-                </div>
+                <!--  -->
 
                 <!-- vector -->
               </div>
