--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
       rel="stylesheet"
       href="assets/vendor/no-ui-slider/nouislider.min.css"
     />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
     <!-- custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css" />
@@ -68,19 +69,19 @@
               <a href="index.html">Home</a>
               <a href="about.html">About Me</a>
 
-              <div class="has-sub-menu relative">
+              <!-- <div class="has-sub-menu relative">
                 <a role="button">Blog</a>
 
-                <ul class="jo-header-submenu">
+                 <ul class="jo-header-submenu">
                   <li><a href="blog.html">Blogs</a></li>
                   <li><a href="blog-details.html">Blog Details</a></li>
-                </ul>
-              </div>
+                </ul> 
+              </div> -->
               <a href="contact.html">Contact</a>
             </nav>
           </div>
         </div>
-        <div class="d-flex gap-2">
+        <!-- <div class="d-flex gap-2">
           <a href="about.html" class="jo-btn"
             ><i class="flaticon-add-plus-button"></i>Follow Me</a
           >
@@ -89,8 +90,8 @@
           >
             <i class="flaticon-menu"></i>
           </button>
-        </div>
-      </div>
+        </div> -->
+      <!-- </div> -->
     </header>
     <!-- HEADER SECTION END -->
 
@@ -664,7 +665,22 @@
             <div class="col-lg-3 col-6 col-xxs-12 order-lg-2 order-1">
               <div
                 class="tt-footer-top__socials jo-footer-top__socials justify-content-start justify-content-sm-end"
-              ></div>
+              >
+                <div class="social-icons d-flex gap-3 mt-3">
+          <a href="#" class="text-white text-xl hover:text-pink-500">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="#" class="text-white text-xl hover:text-black">
+            <i class="fab fa-tiktok"></i>
+          </a>
+          <a href="#" class="text-white text-xl hover:text-blue-500">
+            <i class="fab fa-x-twitter"></i>
+          </a>
+          <a href="#" class="text-white text-xl hover:text-red-600">
+            <i class="fab fa-youtube"></i>
+          </a>
+        </div>
+              </div>
             </div>
           </div>
         </div>
@@ -675,7 +691,7 @@
             <div class="col-xl-4 col-md-6">
               <div class="jo-footer-widget jo-footer-contact">
                 <h5 class="jo-footer-widget__title">Get in Touch</h5>
-                <a href="mailto:contact.me@gmail.com">contact.me@gmail.com</a>
+                <a href="mailto:Passionseeed@gmail.com">Passionseeed@gmail.com</a>
               </div>
             </div>
 
@@ -692,17 +708,7 @@
               </div>
             </div>
 
-            <div class="col-xl-4 col-md-6">
-              <div class="jo-footer-widget jo-footer-gallery">
-                <h5 class="jo-footer-widget__title">Instagram feed</h5>
-                <div class="imgs flex-wrap">
-                  <img src="assets/img/footer-img-1.jpg" alt="Footer Image" />
-                  <img src="assets/img/footer-img-2.jpg" alt="Footer Image" />
-                  <img src="assets/img/footer-img-3.jpg" alt="Footer Image" />
-                  <img src="assets/img/footer-img-4.jpg" alt="Footer Image" />
-                </div>
-              </div>
-            </div>
+            
           </div>
         </div>
 
