--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   <div class="tt-service-tab">
                     <!-- img -->
                     <div class="img">
-                      <img src="assets/img/service.jpg" alt="service image" />
+                      <img src="assets/img/services.jpg" alt="service image" />
                     </div>
 
                     <!-- txt -->
