--- a/about.html
+++ b/about.html
@@ -185,270 +185,10 @@
       </section>
       <!-- ABOUT SECTION END -->
 
-      <!-- VIDEOS SECTION START -->
-      <section class="jo-videos jo-inner-videos">
-        <div class="jo-container">
-          <!-- heading -->
-          <div class="jo-videos__heading">
-            <h2 class="jo-section-title">My Latest Premium Videos</h2>
-            <a href="videos-1.html" class="jo-btn jo-videos__btn"
-              ><i class="flaticon-premium-quality"></i> View All Videos</a
-            >
-          </div>
-        </div>
-
-        <!-- video cards -->
-        <div class="jo-videos-slider splide">
-          <div class="splide__track">
-            <ul class="splide__list">
-              <li class="splide__slide">
-                <div class="jo-video-card">
-                  <img
-                    src="assets/img/jo-video-1.jpg"
-                    alt="Video Thumbnail"
-                    class="jo-video-card__img"
-                  />
-
-                  <div class="jo-video-card__txt">
-                    <div class="d-flex justify-content-between">
-                      <a
-                        href="https://youtu.be/vc3WCrgYpF0?si=W2iFDfdDYsh6spKg"
-                        data-fslightbox="videos"
-                        class="jo-video-card__btn"
-                        ><i class="flaticon-play"></i
-                      ></a>
-                      <span class="jo-video-card__premium-tag"
-                        ><i class="flaticon-premium-quality"></i
-                      ></span>
-                    </div>
-
-                    <div class="bottom">
-                      <span class="price">$5.00</span>
-                      <h5>
-                        <a
-                          href="video-details.html"
-                          class="jo-video-card__title"
-                          >Smiley woman pop party studio medium shot</a
-                        >
-                      </h5>
-                      <div class="tt-video__infos jo-video-card__infos">
-                        <span>16M views</span>
-                        <span>49 minutes ago</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-
-              <li class="splide__slide">
-                <div class="jo-video-card">
-                  <img
-                    src="assets/img/jo-video-2.jpg"
-                    alt="Video Thumbnail"
-                    class="jo-video-card__img"
-                  />
-
-                  <div class="jo-video-card__txt">
-                    <div class="d-flex justify-content-between">
-                      <a
-                        href="https://youtu.be/vc3WCrgYpF0?si=W2iFDfdDYsh6spKg"
-                        data-fslightbox="videos"
-                        class="jo-video-card__btn"
-                        ><i class="flaticon-play"></i
-                      ></a>
-                      <span class="jo-video-card__premium-tag"
-                        ><i class="flaticon-premium-quality"></i
-                      ></span>
-                    </div>
-
-                    <div class="bottom">
-                      <span class="price">$5.00</span>
-                      <h5>
-                        <a
-                          href="video-details.html"
-                          class="jo-video-card__title"
-                          >Smiley woman pop party studio medium shot</a
-                        >
-                      </h5>
-                      <div class="tt-video__infos jo-video-card__infos">
-                        <span>16M views</span>
-                        <span>49 minutes ago</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-
-              <li class="splide__slide">
-                <div class="jo-video-card">
-                  <img
-                    src="assets/img/jo-video-3.jpg"
-                    alt="Video Thumbnail"
-                    class="jo-video-card__img"
-                  />
-
-                  <div class="jo-video-card__txt">
-                    <div class="d-flex justify-content-between">
-                      <a
-                        href="https://youtu.be/vc3WCrgYpF0?si=W2iFDfdDYsh6spKg"
-                        data-fslightbox="videos"
-                        class="jo-video-card__btn"
-                        ><i class="flaticon-play"></i
-                      ></a>
-                      <span class="jo-video-card__premium-tag"
-                        ><i class="flaticon-premium-quality"></i
-                      ></span>
-                    </div>
-
-                    <div class="bottom">
-                      <span class="price">$5.00</span>
-                      <h5>
-                        <a
-                          href="video-details.html"
-                          class="jo-video-card__title"
-                          >Smiley woman pop party studio medium shot</a
-                        >
-                      </h5>
-                      <div class="tt-video__infos jo-video-card__infos">
-                        <span>16M views</span>
-                        <span>49 minutes ago</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="jo-videos-slider-2 splide">
-          <div class="splide__track">
-            <ul class="splide__list">
-              <li class="splide__slide">
-                <div class="jo-video-card">
-                  <img
-                    src="assets/img/jo-video-4.jpg"
-                    alt="Video Thumbnail"
-                    class="jo-video-card__img"
-                  />
-
-                  <div class="jo-video-card__txt">
-                    <div class="d-flex justify-content-between">
-                      <a
-                        href="https://youtu.be/vc3WCrgYpF0?si=W2iFDfdDYsh6spKg"
-                        data-fslightbox="videos"
-                        class="jo-video-card__btn"
-                        ><i class="flaticon-play"></i
-                      ></a>
-                      <span class="jo-video-card__premium-tag d-none"
-                        ><i class="flaticon-premium-quality"></i
-                      ></span>
-                    </div>
-
-                    <div class="bottom">
-                      <span class="price">Free</span>
-                      <h5>
-                        <a
-                          href="video-details.html"
-                          class="jo-video-card__title"
-                          >Smiley woman pop party studio medium shot</a
-                        >
-                      </h5>
-                      <div class="tt-video__infos jo-video-card__infos">
-                        <span>16M views</span>
-                        <span>49 minutes ago</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-
-              <li class="splide__slide">
-                <div class="jo-video-card">
-                  <img
-                    src="assets/img/jo-video-5.jpg"
-                    alt="Video Thumbnail"
-                    class="jo-video-card__img"
-                  />
-
-                  <div class="jo-video-card__txt">
-                    <div class="d-flex justify-content-between">
-                      <a
-                        href="https://youtu.be/vc3WCrgYpF0?si=W2iFDfdDYsh6spKg"
-                        data-fslightbox="videos"
-                        class="jo-video-card__btn"
-                        ><i class="flaticon-play"></i
-                      ></a>
-                      <span class="jo-video-card__premium-tag"
-                        ><i class="flaticon-premium-quality"></i
-                      ></span>
-                    </div>
-
-                    <div class="bottom">
-                      <span class="price">$5.00</span>
-                      <h5>
-                        <a
-                          href="video-details.html"
-                          class="jo-video-card__title"
-                          >Smiley woman pop party studio medium shot</a
-                        >
-                      </h5>
-                      <div class="tt-video__infos jo-video-card__infos">
-                        <span>16M views</span>
-                        <span>49 minutes ago</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-
-              <li class="splide__slide">
-                <div class="jo-video-card">
-                  <img
-                    src="assets/img/jo-video-6.jpg"
-                    alt="Video Thumbnail"
-                    class="jo-video-card__img"
-                  />
-
-                  <div class="jo-video-card__txt">
-                    <div class="d-flex justify-content-between">
-                      <a
-                        href="https://youtu.be/vc3WCrgYpF0?si=W2iFDfdDYsh6spKg"
-                        data-fslightbox="videos"
-                        class="jo-video-card__btn"
-                        ><i class="flaticon-play"></i
-                      ></a>
-                      <span class="jo-video-card__premium-tag"
-                        ><i class="flaticon-premium-quality"></i
-                      ></span>
-                    </div>
-
-                    <div class="bottom">
-                      <span class="price">$5.00</span>
-                      <h5>
-                        <a
-                          href="video-details.html"
-                          class="jo-video-card__title"
-                          >Smiley woman pop party studio medium shot</a
-                        >
-                      </h5>
-                      <div class="tt-video__infos jo-video-card__infos">
-                        <span>16M views</span>
-                        <span>49 minutes ago</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
-      <!-- VIDEOS SECTION END -->
 
       <!-- CONTACT SECTION START -->
       <section class="jo-contact">
-        <div class="top">
+        <div style="margin-bottom:16rem ;" class="top">
           <div class="jo-container">
             <div class="row align-items-end">
               <!-- contact form -->
@@ -512,52 +252,7 @@
           </div>
         </div>
 
-        <div class="bottom">
-          <div class="jo-container overflow-hidden">
-            <div class="row gx-5">
-              <div class="col-lg-6 blank-space d-none d-lg-block"></div>
-
-              <div class="col-lg-6">
-                <h5 class="jo-partners-title">Trusted Partners</h5>
-                <div class="jo-partners-slider swiper">
-                  <div class="swiper-wrapper align-items-center">
-                    <!-- single partner -->
-                    <div class="swiper-slide">
-                      <img src="assets/img/partner-1.png" alt="Partner Image" />
-                    </div>
-
-                    <!-- single partner -->
-                    <div class="swiper-slide">
-                      <img src="assets/img/partner-2.png" alt="Partner Image" />
-                    </div>
-
-                    <!-- single partner -->
-                    <div class="swiper-slide">
-                      <img src="assets/img/partner-3.png" alt="Partner Image" />
-                    </div>
-
-                    <!-- single partner -->
-                    <div class="swiper-slide">
-                      <img src="assets/img/partner-4.png" alt="Partner Image" />
-                    </div>
-
-                    <!-- single partner -->
-                    <div class="swiper-slide">
-                      <img src="assets/img/partner-1.png" alt="Partner Image" />
-                    </div>
-
-                    <!-- single partner -->
-                    <div class="swiper-slide">
-                      <img src="assets/img/partner-1.png" alt="Partner Image" />
-                    </div>
-                  </div>
-
-                  <div class="jo-partners-slider-pagination"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+       
       </section>
       <!-- CONTACT SECTION END -->
 
@@ -695,18 +390,17 @@
               </div>
             </div>
 
-            <div class="col-xl-4 col-md-6">
-              <div class="jo-footer-widget jo-footer-links">
-                <h5 class="jo-footer-widget__title">Browse Categories</h5>
-                <div class="links">
-                  <a href="#">About</a>
-                  <a href="#">Contact</a>
-                  <a href="#">Terms</a>
-                  <a href="#">Privacy</a>
-                  <a href="#">Art</a>
-                </div>
-              </div>
-            </div>
+          <div class="col-xl-4 col-md-6">
+  <div class="jo-footer-widget jo-footer-links">
+    <h5 class="jo-footer-widget__title">Browse Categories</h5>
+    <div style="font-size: clamp(13px, 0.833vw, 16px); display: flex; gap: 40px; flex-wrap: wrap;">
+      <a href="#" style="font-weight: 500; color: #b5b5b5; text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='var(--ttRed)'" onmouseout="this.style.color='#b5b5b5'">About</a>
+      <a href="#" style="font-weight: 500; color: #b5b5b5; text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='var(--ttRed)'" onmouseout="this.style.color='#b5b5b5'">Contact</a>
+      <a href="#" style="font-weight: 500; color: #b5b5b5; text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='var(--ttRed)'" onmouseout="this.style.color='#b5b5b5'">Terms</a>
+      <a href="#" style="font-weight: 500; color: #b5b5b5; text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='var(--ttRed)'" onmouseout="this.style.color='#b5b5b5'">Privacy</a>
+    </div>
+  </div>
+</div>
 
             
           </div>
