--- a/contact.html
+++ b/contact.html
@@ -129,57 +129,6 @@
       <!-- BREADCRUMB SECTION END -->
 
       <!-- CONTACT SECTION START -->
-      <section class="jo-inner-main-content">
-        <div class="jo-container">
-          <div
-            class="row g-lg-4 g-3 row-cols-lg-4 row-cols-md-3 row-cols-2 row-cols-xxs-1"
-          >
-            <!-- single contact info -->
-            <div class="col">
-              <div class="jo-contact-info">
-                <div class="icon"><i class="flaticon-location-pin"></i></div>
-                <h3 class="title">Our Address</h3>
-                <p class="descr">
-                  4517 Washington Ave. Manchester, Kentucky 39495
-                </p>
-              </div>
-            </div>
-            <!-- single contact info -->
-            <div class="col">
-              <div class="jo-contact-info">
-                <div class="icon"><i class="flaticon-email-marketing"></i></div>
-                <h3 class="title">
-                  <a href="mailto:info@exmple.com">info@exmple.com</a>
-                </h3>
-                <p class="descr">Email us anytime for any kind ofquety.</p>
-              </div>
-            </div>
-            <!-- single contact info -->
-            <div class="col">
-              <div class="jo-contact-info">
-                <div class="icon"><i class="flaticon-phone-1"></i></div>
-                <h3 class="title">
-                  <a href="tel:20866601112">Hot: +208-666-01112</a>
-                </h3>
-                <p class="descr">
-                  24/7/365 priority Live Chat and ticketing support.
-                </p>
-              </div>
-            </div>
-            <!-- single contact info -->
-            <div class="col">
-              <div class="jo-contact-info">
-                <div class="icon"><i class="flaticon-clock"></i></div>
-                <h3 class="title">Opening Hour</h3>
-                <p class="descr">
-                  <span>Sunday-Fri: 9 AM – 6 PM</span><br />
-                  <span>Saturday: 9 AM – 4 PM</span>
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
 
       <section class="jo-inner-contact-form-section">
         <div class="jo-container">
@@ -341,12 +290,62 @@
             <div class="col-xl-4 col-md-6">
               <div class="jo-footer-widget jo-footer-links">
                 <h5 class="jo-footer-widget__title">Browse Categories</h5>
-                <div class="links">
-                  <a href="#">About</a>
-                  <a href="#">Contact</a>
-                  <a href="#">Terms</a>
-                  <a href="#">Privacy</a>
-                  <a href="#">Art</a>
+                <div
+                  style="
+                    font-size: clamp(13px, 0.833vw, 16px);
+                    display: flex;
+                    gap: 40px;
+                    flex-wrap: wrap;
+                  "
+                >
+                  <a
+                    href="#"
+                    style="
+                      font-weight: 500;
+                      color: #b5b5b5;
+                      text-decoration: none;
+                      transition: color 0.3s ease;
+                    "
+                    onmouseover="this.style.color='var(--ttRed)'"
+                    onmouseout="this.style.color='#b5b5b5'"
+                    >About</a
+                  >
+                  <a
+                    href="#"
+                    style="
+                      font-weight: 500;
+                      color: #b5b5b5;
+                      text-decoration: none;
+                      transition: color 0.3s ease;
+                    "
+                    onmouseover="this.style.color='var(--ttRed)'"
+                    onmouseout="this.style.color='#b5b5b5'"
+                    >Contact</a
+                  >
+                  <a
+                    href="#"
+                    style="
+                      font-weight: 500;
+                      color: #b5b5b5;
+                      text-decoration: none;
+                      transition: color 0.3s ease;
+                    "
+                    onmouseover="this.style.color='var(--ttRed)'"
+                    onmouseout="this.style.color='#b5b5b5'"
+                    >Terms</a
+                  >
+                  <a
+                    href="#"
+                    style="
+                      font-weight: 500;
+                      color: #b5b5b5;
+                      text-decoration: none;
+                      transition: color 0.3s ease;
+                    "
+                    onmouseover="this.style.color='var(--ttRed)'"
+                    onmouseout="this.style.color='#b5b5b5'"
+                    >Privacy</a
+                  >
                 </div>
               </div>
             </div>
