--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
 
       <!-- CONTACT SECTION START -->
       <section class="jo-contact">
-        <div class="top">
+        <div style="margin-bottom: 16rem;" class="top">
           <div class="jo-container">
             <div class="row align-items-end">
               <!-- contact form -->
@@ -491,52 +491,6 @@
           </div>
         </div>
 
-        <div class="bottom">
-          <div class="jo-container overflow-hidden">
-            <div class="row gx-5">
-              <div class="col-lg-6 blank-space d-none d-lg-block"></div>
-
-              <div class="col-lg-6">
-                <h5 class="jo-partners-title">Trusted Partners</h5>
-                <div class="jo-partners-slider swiper">
-                  <div class="swiper-wrapper">
-                    <!-- single partner -->
-                    <div class="swiper-slide">
-                      <img src="assets/img/partner-1.png" alt="Partner Image" />
-                    </div>
-
-                    <!-- single partner -->
-                    <div class="swiper-slide">
-                      <img src="assets/img/partner-2.png" alt="Partner Image" />
-                    </div>
-
-                    <!-- single partner -->
-                    <div class="swiper-slide">
-                      <img src="assets/img/partner-3.png" alt="Partner Image" />
-                    </div>
-
-                    <!-- single partner -->
-                    <div class="swiper-slide">
-                      <img src="assets/img/partner-4.png" alt="Partner Image" />
-                    </div>
-
-                    <!-- single partner -->
-                    <div class="swiper-slide">
-                      <img src="assets/img/partner-1.png" alt="Partner Image" />
-                    </div>
-
-                    <!-- single partner -->
-                    <div class="swiper-slide">
-                      <img src="assets/img/partner-2.png" alt="Partner Image" />
-                    </div>
-                  </div>
-
-                  <div class="jo-partners-slider-pagination"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
       </section>
       <!-- CONTACT SECTION END -->
 
@@ -751,18 +705,17 @@
               </div>
             </div>
 
-            <div class="col-xl-4 col-md-6">
-              <div class="jo-footer-widget jo-footer-links">
-                <h5 class="jo-footer-widget__title">Browse Categories</h5>
-                <div class="links">
-                  <a href="#">About</a>
-                  <a href="#">Contact</a>
-                  <a href="#">Terms</a>
-                  <a href="#">Privacy</a>
-                  <a href="#">Art</a>
-                </div>
-              </div>
-            </div>
+           <div class="col-xl-4 col-md-6">
+  <div class="jo-footer-widget jo-footer-links">
+    <h5 class="jo-footer-widget__title">Browse Categories</h5>
+    <div style="font-size: clamp(13px, 0.833vw, 16px); display: flex; gap: 40px; flex-wrap: wrap;">
+      <a href="#" style="font-weight: 500; color: #b5b5b5; text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='var(--ttRed)'" onmouseout="this.style.color='#b5b5b5'">About</a>
+      <a href="#" style="font-weight: 500; color: #b5b5b5; text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='var(--ttRed)'" onmouseout="this.style.color='#b5b5b5'">Contact</a>
+      <a href="#" style="font-weight: 500; color: #b5b5b5; text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='var(--ttRed)'" onmouseout="this.style.color='#b5b5b5'">Terms</a>
+      <a href="#" style="font-weight: 500; color: #b5b5b5; text-decoration: none; transition: color 0.3s ease;" onmouseover="this.style.color='var(--ttRed)'" onmouseout="this.style.color='#b5b5b5'">Privacy</a>
+    </div>
+  </div>
+</div>
 
             
           </div>
