--- a/index.html
+++ b/index.html
@@ -229,14 +229,14 @@
               <!-- txt -->
               <div class="col-xl-6 col-lg-7 col-8">
                 <div class="jo-intro__txt">
-                  <h2 class="jo-section-title">
+                  <h2 style="font-size: 50px;" class="jo-section-title">
                     About Me
                   </h2>
-                  <p class="jo-intro__descr">
+                  <p style="font-size: 16px;" class="jo-intro__descr">
                   PassionSeed is the best platform for creative live streaming, empowering artists, educators, and performers to share their gifts with the world. With built-in support features, live chat, and a focus on safe, uplifting content, PassionSeed transforms how we create and connect. Whether you want to share music, art, knowledge, or passion — it’s your time to shine.
                   </p>
 
-                  <ul class="jo-intro__list">
+                  <ul  class="jo-intro__list">
                     <li>Easy Access via Web and Mobile</li>
                     <li>Social Engagement</li>
                     <li>
